--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,32 @@
-.App {
-  text-align: center;
+#d3-learn{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+#menu {
+    flex-shrink: 0;
+    width: 120px;
+    height: 100%;
+    padding: 30px 10px;
+    border-right: 1px dashed rgba(0,0,0,0.3);
+}
+.menu-item{
+    width: 100%;
+    display: block;
+    text-align: center;
+    font-size: 16px;
+    height: 24px;
+    margin-bottom: 14px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.active-menu{
+    color: burlywood;
+    background-color: aquamarine;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#page-content{
+    flex-grow: 1;
+    height: 100vh;
 }
