--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+
+*{
+  margin: 0;
+  padding: 0;
+}
+
+a{
+  text-decoration: none;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -8,7 +18,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+#root {
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
 }
+
